--- a/tests/Endpoint.Angular.UnitTests/Endpoint.Angular.UnitTests.csproj
+++ b/tests/Endpoint.Angular.UnitTests/Endpoint.Angular.UnitTests.csproj
@@ -6,7 +6,7 @@
     <LangVersion>latest</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <NoWarn>1998;4014,SA1101,SA1600,SA1200,SA1633</NoWarn>
+    <NoWarn>$(NoWarn);1998;4014;SA1101;SA1600;SA1200;SA1633</NoWarn>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
