--- a/playground/SolutionCreateFromSequence/SolutionCreateFromSequence.csproj
+++ b/playground/SolutionCreateFromSequence/SolutionCreateFromSequence.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <NoWarn>1998,4014,SA1101,SA1600,SA1200,SA1633,1591,SA1309</NoWarn>
+    <NoWarn>$(NoWarn);1998;4014;SA1101;SA1600;SA1200;SA1633;1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
