--- a/tests/Endpoint.Engineering.UnitTests/Endpoint.Engineering.UnitTests.csproj
+++ b/tests/Endpoint.Engineering.UnitTests/Endpoint.Engineering.UnitTests.csproj
@@ -7,7 +7,7 @@
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
-    <NoWarn>1998,4014,,SA1101,SA1600,,SA1200,SA1633,1591</NoWarn>
+    <NoWarn>$(NoWarn);1998;4014;SA1101;SA1600;SA1200;SA1633;1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
