--- a/src/Endpoint.Engineering.Cli/Properties/launchSettings.json
+++ b/src/Endpoint.Engineering.Cli/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Endpoint.Cli": {
       "commandName": "Project",
-      "commandLineArgs": ". -d C:\\projects\\MitchellBrown\\src\\MitchellBrown.WebApp\\src\\app\\pages\\home\\"
+      "commandLineArgs": "--help"
     }
   }
 }
