--- a/src/Endpoint.Engineering.Cli/appsettings.json
+++ b/src/Endpoint.Engineering.Cli/appsettings.json
@@ -1,3 +1,10 @@
 {
-
+  "Default": {
+    "Name": "",
+    "Port": "5000",
+    "Properties": "",
+    "Resource": "",
+    "Monolith": "false",
+    "Minimal": "false"
+  }
 }
