--- a/src/Endpoint.Engineering.ALaCarte.Api/Endpoint.Engineering.ALaCarte.Api.csproj
+++ b/src/Endpoint.Engineering.ALaCarte.Api/Endpoint.Engineering.ALaCarte.Api.csproj
@@ -13,7 +13,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
