--- a/src/Endpoint.Engineering.Workspace/package.json
+++ b/src/Endpoint.Engineering.Workspace/package.json
@@ -38,7 +38,8 @@
     "@angular/router": "^21.0.0",
     "@vitest/coverage-v8": "^4.0.17",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zone.js": "^0.16.0"
   },
   "devDependencies": {
     "@angular/build": "^21.1.0",
