--- a/src/Endpoint.DotNet.Cli/Endpoint.DotNet.Cli.csproj
+++ b/src/Endpoint.DotNet.Cli/Endpoint.DotNet.Cli.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <LangVersion>latest</LangVersion>
     <Authors>Quinntyne Brown</Authors>
-    <Company>Allagi Consulting</Company>
+    <Company>Quinntyne Brown</Company>
     <PackageTags>clean-architecture;source-generator;application-code;scaffolding;cli</PackageTags>
     <RepositoryUrl>https://github.com/QuinntyneBrown/Endpoint</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
